--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,3 @@
-/*
-Design by Free CSS Templates
-http://www.freecsstemplates.org
-Released for free under a Creative Commons Attribution 2.5 License
-*/
-
 body {
 	margin: 0;
 	padding: 0;
@@ -11,96 +5,88 @@ body {
 	font-family: "Times New Roman", sans-serif;
 	line-height: 1.8em;
 	color: #000000;
-}
-
-h1, h2, h3, h4, h5, h6 {
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 	padding: 0;
 	font-family: "Times New Roman", sans-serif;
 	font-weight: normal;
 	color: #000000;
-}
-
-h2 {
+  }
+  
+  h2 {
 	font-size: 22px;
-}
-
-h3 {
+  }
+  
+  h3 {
 	margin-bottom: 1em;
 	text-transform: uppercase;
 	letter-spacing: 2px;
-	font-size: .9em;
+	font-size: 0.9em;
 	font-weight: bold;
-}
-
-p, blockquote, ul, ol {
+  }
+  
+  p, blockquote, ul, ol {
 	margin-top: 0;
-}
-
-#center {
+  }
+  
+  #center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
   }
   
-#posts {
+  #posts {
 	border: 3px solid black;
 	border-radius: 20px;
 	background-color: #FFFFFF;
 	padding: 20px;
 	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
-}
-
-.mastertitle {
+  }
+  
+  .mastertitle {
 	font-size: 40px;
 	font-weight: bold;
 	padding: 15px 0;
-}
-
-.title {
+  }
+  
+  .title {
 	font-size: 30px;
 	padding: 15px 0;
-}
-
-.span {
+  }
+  
+  .span {
 	font-size: 20px;
-}
-
-.textbox {
-    top: 0;
-    left: 0;
-    width: 15%;
-    border: 1px solid rgb(93, 93, 93);
-    outline: none;
-    padding: 5px;
-	margin: 10px;
-    border-radius: 3px;
-    font-size: 1.2em;
-}
-
-.operation_textbox {
-    top: 0;
-    left: 0;
-    width: 5%;
-    border: 1px solid rgb(93, 93, 93);
-    outline: none;
-    padding: 5px;
-	margin: 10px;
-    border-radius: 3px;
-    font-size: 1.2em;
-}
-
-.submit {
+  }
+  
+  .textbox, .operation_textbox {
 	top: 0;
-    left: 0;
-    width: 15%;
-    border: 0px solid rgb(93, 93, 93);
-	background: dodgerblue;
-    outline: none;
-    padding: 5px;
+	left: 0;
+	width: 15%;
+	border: 1px solid rgb(93, 93, 93);
+	outline: none;
+	padding: 5px;
 	margin: 10px;
-    border-radius: 3px;
+	border-radius: 3px;
+	font-size: 1.2em;
+  }
+  
+  .operation_textbox {
+	width: 5%;
+  }
+  
+  .submit {
+	top: 0;
+	left: 0;
+	width: 15%;
+	border: 0;
+	background: dodgerblue;
+	outline: none;
+	padding: 5px;
+	margin: 10px;
+	border-radius: 3px;
 	font-size: 1.5em;
-    color: #ffffff;
-}
+	color: #FFFFFF;
+  }
